removed random white space, cards fixed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
   height: 84px;
-  background-color: rgb(169, 213, 231);
-  padding-left: 26px;
+  background-color: rgb(49, 219, 235);
+  // padding-left: 26px;
+  width: 100vw;
 }
 
 .navbar-lewagon .navbar-collapse {
